Add scap configuration to restart the Pivot service after deploy
Bug: T146389
Change-Id: Id6dc076a5ebb76e3c636d976afc59ae1131d3cb8

--- a/scap/scap.cfg
+++ b/scap/scap.cfg
@@ -7,6 +7,8 @@ server_groups: default
 dsh_targets: targets
 git_submodules: True
 lock_file: /tmp/scap.pivot.lock
+service_name: pivot
+service_port: 9090
 
 [wmnet]
 git_server: deployment.eqiad.wmnet
